--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <title>DRIP STORE - DIGITAL COLLEGE</title>
+    <style>
+      .price {
+          color: #333333; /* Cor padrão escura para o texto */
+      }
+      .price .current {
+          font-size: 2em;
+          font-weight: bold;
+      }
+      .price .old {
+          font-size: 1em;
+          text-decoration: line-through;
+          color: #999999; /* Cor mais clara para o texto riscado */
+      }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
   </head>
   <body>
